# Building-invoice-Ai

./: .env  .env.example  .gitignore  LICENSE  README.md  init_db.py  pyproject.toml  requirements.txt  test_invoice.txt
ai/: classifier.py  extractor.py  postprocessing.py  prompts.py
app/: main.py
app/api/: deps.py  routes.py
app/core/: config.py  security.py
db/: models.py  session.py
frontend/: app.py
frontend/templates/: index.html
models/: schemas.py
pipelines/: invoice_pipeline.py
services/: invoice_service.py  user_service.py
src/invoice_ai/: __init__.py  api.py  cli.py  config.py  db.py  models.py  parser.py  service.py
tests/: test_invoice.py  test_parser.py
