[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-ai"
version = "0.2.0"
description = "Starter Invoice AI parser project"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
invoice-ai = "invoice_ai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
