[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-ai"
version = "0.3.0"
description = "Starter Invoice AI parser project"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "pypdf>=4.2.0",
]

[project.scripts]
invoice-ai = "invoice_ai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
